--- a/css/style.css
+++ b/css/style.css
@@ -101,17 +101,14 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 40px 0;
   z-index: 1001;
 }
-
-
 @media screen and (max-width: 768px) {
   .gtco-nav {
     padding: 20px 0;
   }
 }
 .gtco-nav #gtco-logo {
-  font-size: 20px;
+  font-size: 30px;
   margin: 0;
-  width: 100%;
   padding: 0;
   text-transform: uppercase;
   font-weight: bold;
@@ -123,7 +120,6 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .gtco-nav .menu-1, .gtco-nav .menu-2 {
     display: none;
-    
   }
 }
 .gtco-nav ul {
@@ -136,7 +132,6 @@ h1, h2, h3, h4, h5, h6, figure {
   list-style: none;
   display: inline;
 }
-
 .gtco-nav ul li a {
   font-size: 24px;
   padding: 30px 10px;
@@ -235,12 +230,19 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff !important;
 }
 
-#gtco-header,
+
+#gtco-header{
+    background-size: contain;
+    height: 100%;
+  background-position:  center;
+  background-repeat: repeat;
+  position: relative;
+}
 #gtco-counter,
 .gtco-bg {
-  background-size:40%;
+  background-size: cover;
   background-position: top center;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   position: relative;
 }
 
@@ -295,6 +297,7 @@ h1, h2, h3, h4, h5, h6, figure {
   left: 0;
   right: 0;
   bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -327,6 +330,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .gtco-cover a:hover {
   color: white;
   border-bottom: 1px solid white;
+
 }
 .gtco-cover .overlay {
   z-index: 1;
