--- a/css/style.css
+++ b/css/style.css
@@ -228,20 +228,17 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .gtco-nav ul li.active > a {
   color: #fff !important;
-}
-
+} 
 
 #gtco-header{
-    background-size: contain;
-    height: 100%;
-  background-position:  center;
-  background-repeat: repeat;
-  position: relative;
+  background-image: url(../images/lo1w3.png);
 }
+
+#gtco-header,
 #gtco-counter,
 .gtco-bg {
   background-size: cover;
-  background-position: top center;
+  background-position: center center;
   background-repeat: no-repeat;
   position: relative;
 }
@@ -359,7 +356,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .gtco-cover .display-t,
   .gtco-cover .display-tc {
-    height: 600px;
+    height: 900px;
   }
 }
 .gtco-cover.gtco-cover-sm {
